fix: added width and height for img tags to fix img jumps and merged styles

--- a/src/pages/sellerPages/MainPage/ImagesBlock/ImagesBlock.module.css
+++ b/src/pages/sellerPages/MainPage/ImagesBlock/ImagesBlock.module.css
@@ -51,7 +51,6 @@
   font-size: 62px;
   font-weight: var(--semi-bold);
   line-height: 78px;
-
 }
 
 .grid_item_main_ad > span:last-child{
@@ -69,17 +68,18 @@
   padding: 0 32px;
 }
 
-
+.images_box_grid img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 8px;
+}
 
 .grid_item1, .grid_item2, .grid_item3, .grid_item4{
   position: relative;
-
-
   font-family: var(--roboto);
   font-style: normal;
   color: var(--color-accent);
-
-  border-radius: 12px;
 }
 
 .grid_item_ad{
@@ -88,16 +88,6 @@
 
 .grid_item1{
   grid-area: item1;
-}
-
-.grid_item1 > img{
-  width: 100%;
-  max-width: 682px;
-  height: 100%;
-  max-height: 500px;
-
-  object-fit: cover;
-  border-radius: 12px;
 }
 
 .grid_item1 > .grid_item_ad{
@@ -113,15 +103,6 @@
 
 .grid_item2{
   grid-area: item2;
-}
-
-.grid_item2 > img{
-  width: 100%;
-  max-width: 682px;
-  height: 100%;
-  max-height: 244px;
-
-  object-fit: contain;
 }
 
 .grid_item2 > .grid_item_ad{
@@ -147,15 +128,6 @@
   grid-area: item3;
 }
 
-.grid_item3 > img{
-  width: 100%;
-  max-width: 335px;
-  height: 100%;
-  max-height: 244px;
-
-  object-fit: contain;
-}
-
 .grid_item3 > .grid_item_ad{
   top: 62px;
   left: 20px;
@@ -169,15 +141,6 @@
 
 .grid_item4{
   grid-area: item4;
-}
-
-.grid_item4 > img{
-  width: 100%;
-  max-width: 335px;
-  height: 100%;
-  max-height: 244px;
-
-  object-fit: contain;
 }
 
 .grid_item4 > .grid_item_ad{
